--- a/config.conf
+++ b/config.conf
@@ -2,3 +2,8 @@
 Username = na_ncc_fpt
 Password = Nghean123@
 [URL]
+LoginURL = https://api-hssk.kcb.vn/api/v1/resource/authentication/login
+UploadURL = https://tructichhop-api.kcb.vn/hssk/4210
+[DICRECTORY]
+Folder4210 = 4210XML
+Logs = logs
