--- a/config.conf
+++ b/config.conf
@@ -7,3 +7,5 @@ UploadURL = https://tructichhop-api.kcb.vn/hssk/4210
 [DICRECTORY]
 Folder4210 = 4210XML
 Logs = logs
+[SETTINGS]
+TIME_AUTO_REUP = 60
