--- a/config.conf
+++ b/config.conf
@@ -1,6 +1,6 @@
 [AUTH]
-Username = na_ncc_fpt
-Password = Nghean123@
+Username = na_as_ttytanhson
+Password = Jw3@b@qnPjj7vUT
 [URL]
 LoginURL = https://api-hssk.kcb.vn/api/v1/resource/authentication/login
 UploadURL = https://tructichhop-api.kcb.vn/hssk/4210
